--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
 	<title>Nina Carducci - photographe</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="A propos | Portfolio | Services | Contact">
+
+	<meta property="og:site_name" content="Nina Carducci photographe">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://valleeriee.github.io/NinaCarducci/">
+	<meta property="og:title" content="Nina Carducci photographe">
+	<meta property="og:description" content="Découvrez le site de la photographe Nina Carducci : A propos | Portfolio | Services | Contact">
+	<meta property="og:image" content="https://valleeriee.github.io/NinaCarducci/assets/images/nina.webp">
+
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@NinaCarducci">
+	<meta name="twitter:title" content="Nina Carducci photographe">
+	<meta name="twitter:description" content="Découvrez le site de la photographe Nina Carducci : A propos | Portfolio | Services | Contact">
+	<meta name="twitter:image" content="https://valleeriee.github.io/NinaCarducci/assets/images/nina.webp">
+	<meta name="twitter:url" content="https://valleeriee.github.io/NinaCarducci/">
+
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
+
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.js" defer></script>
