--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
-	<title>Nina Carducci - photographe</title>
+	<title>Nina Carducci - photographe à Bordeaux</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="A propos | Portfolio | Services | Contact">
 
 	<meta property="og:site_name" content="Nina Carducci photographe">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://valleeriee.github.io/NinaCarducci/">
-	<meta property="og:title" content="Nina Carducci photographe">
+	<meta property="og:title" content="Nina Carducci photographe Bordeaux">
 	<meta property="og:description" content="Découvrez le site de la photographe Nina Carducci : A propos | Portfolio | Services | Contact">
 	<meta property="og:image" content="https://valleeriee.github.io/NinaCarducci/assets/images/nina.webp">
 
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@NinaCarducci">
-	<meta name="twitter:title" content="Nina Carducci photographe">
+	<meta name="twitter:title" content="Nina Carducci photographe Bordeaux">
 	<meta name="twitter:description" content="Découvrez le site de la photographe Nina Carducci : A propos | Portfolio | Services | Contact">
 	<meta name="twitter:image" content="https://valleeriee.github.io/NinaCarducci/assets/images/nina.webp">
 	<meta name="twitter:url" content="https://valleeriee.github.io/NinaCarducci/">
@@ -40,7 +40,7 @@
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" title="Instagram"><img src="assets/images/instagram.png" alt="Instagram"></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" title="Instagram"><img src="assets/images/instagram.png" width="20" height="20" alt="Instagram"></a></li>
 		</ul>
 	</nav>
 </header>
@@ -55,28 +55,28 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme en costume marchant sur un sol rayé">
+					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" width="1200" height="555" class="d-block w-100 h-auto" alt="Homme en costume marchant sur un sol rayé">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Foule joyeuse levant les bras">
+					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" width="1200" height="555" class="d-block w-100 h-auto" alt="Foule joyeuse levant les bras">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Mariés qui dansent et s'embrassent">
+					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" width="1200" height="555" class="d-block w-100 h-auto" alt="Mariés qui dansent et s'embrassent">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Previous</span>
+				<span class="visually-hidden hidetext">Previous</span>
 			</button>
 			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
 				<span class="carousel-control-next-icon" aria-hidden="true"></span>
-				<span class="visually-hidden">Next</span>
+				<span class="visually-hidden hidetext">Next</span>
 			</button>
 		</div>
 	</section>
 	<section id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina.webp" alt="Photo de Nina Carducci">
+			<img src="./assets/images/nina.webp" width="346" height="345" alt="Photo de Nina Carducci">
 		</div>
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
@@ -89,15 +89,15 @@
 		<h2 class="title">Portfolio</h2>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Concert de Aaron Paul">
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Photo de Ali Morshedlou">
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Réunion chez Jason Goodman">
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Mains d'un couple">
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait de Ade Tunji">
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Couple de mariés">
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait de Nino Van Prattenburg">
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Concert de Austin Neill">
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Femme devant un ordinateur">
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" width="364" height="364" alt="Concert de Aaron Paul" loading="lazy">
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" width="364" height="364" alt="Photo de Ali Morshedlou" loading="lazy">
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" width="364" height="364" alt="Réunion chez Jason Goodman" loading="lazy">
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" width="364" height="364" alt="Mains d'un couple" loading="lazy">
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" width="364" height="364" alt="Portrait de Ade Tunji" loading="lazy">
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" width="364" height="364" alt="Couple de mariés" loading="lazy">
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" width="364" height="364" alt="Portrait de Nino Van Prattenburg" loading="lazy">
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" width="364" height="364" alt="Concert de Austin Neill" loading="lazy">
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" width="364" height="364" alt="Femme devant un ordinateur" loading="lazy">
 			</div>
 		</div>
 		<div class="quote">
@@ -168,11 +168,19 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.webp" alt="Photo d'un appareil photo">
+				<img src="./assets/images/camera.webp" width="312" height="311" alt="Photo d'un appareil photo" loading="lazy">
 			</div>
 		</div>
 	</section>
 </main>
+<footer>
+	<div class="container" itemscope itemtype="https://schema.org/Place">
+		<h2 class="title">Où me trouver</h2>
+		<p class="text-center mb-5 h5" itemprop="address">68 avenue Alsace-Lorraine<br>33200 Bordeaux</p>
+		<p class="text-center mb-0 h5" itemprop="telephone">05 56 67 78 89</p>
+		<p class="text-center mb-5" itemprop="openingHoursSpecification">du lundi au vendredi de 10h à 19h</p>
+	</div>
+</footer>
 
 </body>
 </html>
